# monke

./: .gitignore  .replit  pyproject.toml
monke/: __init__.py  lexer.py  repl.py  token.py
tests/: test_lexer.py
