[tool.poetry]
name = "monke"
version = "0.1.0"
description = "Monke Interpreter"
authors = ["Manikandan Sundararajan <mani@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
